# BO_Empirical_Examples

./: .gitlab-ci.yml  Brainstorming - Empirical Example II.md  README.md  acq_fn_plots.py  bo.py  cascade_example.ipynb  gp_box.py  kinetics.py  pymc_example.ipynb  pyproject.toml  simple_example.ipynb  utils.py  viz.py
bo_examples/: __init__.py  bo.py  kinetics.py  utils.py  viz.py
paper_figures/: gp_box.py
